<resources>
    <string name="app_name">MotelRoom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Đăng nhập</string>
    <string name="menu_register">Đăng ký</string>
    <string name="menu_chungcu">Chung cư</string>
    <string name="menu_phongtrochothue">Phòng trọ cho thuê</string>
    <string name="menu_nhaoghep">Nhà ở ghép</string>
    <string name="menu_nhanghuyencan">Nhà nguyên căn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="categories">
        <item>Phòng trọ cho thuê</item>
        <item>Ở ghép</item>
        <item>Nhà nguyên căn</item>
        <item>Chung cư</item>
    </string-array>
</resources>