<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.motelroom.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.motelroom.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.motelroom.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.motelroom.ui.main.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.motelroom.ui.main.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/register_fragment" />
    <fragment
        android:id="@+id/nav_nha_o_ghep"
        android:name="com.example.motelroom.ui.main.OGhepFragment"
        android:label="Phòng ở ghép"
        tools:layout="@layout/o_ghep_fragment" />
    <fragment
        android:id="@+id/nav_phong_tro_cho_thue"
        android:name="com.example.motelroom.ui.main.PhongTroFragment"
        android:label="Phòng trọ"
        tools:layout="@layout/phong_tro_fragment" />
    <fragment
        android:id="@+id/nav_chung_cu"
        android:name="com.example.motelroom.ui.main.ChungCuFragment"
        android:label="Chung cư"
        tools:layout="@layout/chung_cu_fragment" />
    <fragment
        android:id="@+id/nav_nha_nguyen_can"
        android:name="com.example.motelroom.ui.main.NhaNguyenCanFragment"
        android:label="Nhà nguyên căn"
        tools:layout="@layout/nha_nguyen_can_fragment" />
    <fragment
        android:id="@+id/nav_thong_tin"
        android:name="com.example.motelroom.ui.main.ThongTinFragment"
        android:label="Thông tin tài khoản"
        tools:layout="@layout/thong_tin_fragment" />
    <fragment
        android:id="@+id/nav_chinh_sua_ho_so"
        android:name="com.example.motelroom.ui.main.ChinhSuaHoSoFragment"
        android:label="Chỉnh sửa hồ sơ"
        tools:layout="@layout/chinh_sua_ho_so_fragment" />
</navigation>